@@ -1,3 +1,10 @@
+2017-11-03  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>
+
+	* arts-2-3-857
+
+	* src/m_surface.cc (surfaceTessem): Fixed computation of Q component
+	and related coefficients.
+
 2017-11-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-856
